--- a/smart-calendar/src/app/app.html
+++ b/smart-calendar/src/app/app.html
@@ -1,50 +1,57 @@
 <div class="app-container" [class.dark-theme]="isDarkTheme">
   <router-outlet></router-outlet>
-  
+
   <!-- Global Loading Indicator -->
-  <div class="global-loading" *ngIf="isGlobalLoading">
-    <app-loading-spinner></app-loading-spinner>
-  </div>
+  @if (isGlobalLoading) {
+    <div class="global-loading">
+      <app-loading-spinner></app-loading-spinner>
+    </div>
+  }
 
   <!-- Toast Notifications -->
-  <div class="toast-container" 
-       *ngIf="toastNotifications.length > 0">
-    <div class="toast-notification"
-         *ngFor="let notification of toastNotifications; trackBy: trackByNotification"
-         [class]="'toast-' + notification.type"
-         [@slideInOut]>
-      <mat-icon class="toast-icon">{{ getNotificationIcon(notification.type) }}</mat-icon>
-      <div class="toast-content">
-        <div class="toast-title">{{ notification.title }}</div>
-        <div class="toast-message">{{ notification.message }}</div>
-      </div>
-      <button mat-icon-button 
-              (click)="dismissNotification(notification.id)"
-              class="toast-close">
-        <mat-icon>close</mat-icon>
-      </button>
+  @if (toastNotifications.length > 0) {
+    <div class="toast-container"
+      >
+      @for (notification of toastNotifications; track trackByNotification($index, notification)) {
+        <div class="toast-notification"
+          [class]="'toast-' + notification.type"
+          [@slideInOut]>
+          <mat-icon class="toast-icon">{{ getNotificationIcon(notification.type) }}</mat-icon>
+          <div class="toast-content">
+            <div class="toast-title">{{ notification.title }}</div>
+            <div class="toast-message">{{ notification.message }}</div>
+          </div>
+          <button mat-icon-button
+            (click)="dismissNotification(notification.id)"
+            class="toast-close">
+            <mat-icon>close</mat-icon>
+          </button>
+        </div>
+      }
     </div>
-  </div>
+  }
 
   <!-- PWA Update Available -->
-  <div class="pwa-update-banner" 
-       *ngIf="showPwaUpdate"
-       [@slideInOut]>
-    <div class="update-content">
-      <mat-icon>system_update</mat-icon>
-      <span>Nova versão disponível!</span>
+  @if (showPwaUpdate) {
+    <div class="pwa-update-banner"
+      [@slideInOut]>
+      <div class="update-content">
+        <mat-icon>system_update</mat-icon>
+        <span>Nova versão disponível!</span>
+      </div>
+      <div class="update-actions">
+        <button mat-button (click)="dismissPwaUpdate()">Depois</button>
+        <button mat-raised-button color="primary" (click)="updatePwa()">Atualizar</button>
+      </div>
     </div>
-    <div class="update-actions">
-      <button mat-button (click)="dismissPwaUpdate()">Depois</button>
-      <button mat-raised-button color="primary" (click)="updatePwa()">Atualizar</button>
-    </div>
-  </div>
+  }
 
   <!-- Offline Indicator -->
-  <div class="offline-indicator" 
-       *ngIf="!isOnline"
-       [@slideInOut]>
-    <mat-icon>cloud_off</mat-icon>
-    <span>Você está offline. Algumas funcionalidades podem estar limitadas.</span>
-  </div>
+  @if (!isOnline) {
+    <div class="offline-indicator"
+      [@slideInOut]>
+      <mat-icon>cloud_off</mat-icon>
+      <span>Você está offline. Algumas funcionalidades podem estar limitadas.</span>
+    </div>
+  }
 </div>
