--- a/smart-calendar/src/app/features/categories/components/categories-list.component.html
+++ b/smart-calendar/src/app/features/categories/components/categories-list.component.html
@@ -6,61 +6,56 @@
     </button>
   </div>
 
-  <div class="categories-table-wrapper" *ngIf="!loading; else loadingTemplate">
-    <table mat-table [dataSource]="items" class="categories-table">
-
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Nome</th>
-        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef>Descrição</th>
-        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="color">
-        <th mat-header-cell *matHeaderCellDef>Cor</th>
-        <td mat-cell *matCellDef="let row">
-          <span class="color-badge" [style.background-color]="row.color"></span>
-          {{ row.color }}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef>Criada em</th>
-        <td mat-cell *matCellDef="let row">{{ row.createdAt | date:'dd/MM/yyyy' }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Ações</th>
-        <td mat-cell *matCellDef="let row">
-          <button mat-icon-button [matMenuTriggerFor]="menu">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-          <mat-menu #menu="matMenu">
-            <button mat-menu-item (click)="onEdit(row)">
-              <mat-icon>edit</mat-icon>
-              Editar
+  @if (!loading) {
+    <div class="categories-table-wrapper">
+      <table mat-table [dataSource]="items" class="categories-table">
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Nome</th>
+          <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+        </ng-container>
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef>Descrição</th>
+          <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+        </ng-container>
+        <ng-container matColumnDef="color">
+          <th mat-header-cell *matHeaderCellDef>Cor</th>
+          <td mat-cell *matCellDef="let row">
+            <span class="color-badge" [style.background-color]="row.color"></span>
+            {{ row.color }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="createdAt">
+          <th mat-header-cell *matHeaderCellDef>Criada em</th>
+          <td mat-cell *matCellDef="let row">{{ row.createdAt | date:'dd/MM/yyyy' }}</td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>Ações</th>
+          <td mat-cell *matCellDef="let row">
+            <button mat-icon-button [matMenuTriggerFor]="menu">
+              <mat-icon>more_vert</mat-icon>
             </button>
-            <button mat-menu-item (click)="onDelete(row)">
-              <mat-icon>delete</mat-icon>
-              Deletar
-            </button>
-          </mat-menu>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div>
-
-  <ng-template #loadingTemplate>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item (click)="onEdit(row)">
+                <mat-icon>edit</mat-icon>
+                Editar
+              </button>
+              <button mat-menu-item (click)="onDelete(row)">
+                <mat-icon>delete</mat-icon>
+                Deletar
+              </button>
+            </mat-menu>
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+  } @else {
     <div class="loading">
       <mat-spinner></mat-spinner>
     </div>
-  </ng-template>
+  }
+
 
   <mat-paginator
     [pageSizeOptions]="pageSizeOptions"
