--- a/smart-calendar/src/app/shared/components/category-picker/category-picker.html
+++ b/smart-calendar/src/app/shared/components/category-picker/category-picker.html
@@ -1,48 +1,62 @@
 <div class="category-picker">
   <div class="category-list" role="listbox" aria-label="Seletor de categorias">
-    <div *ngFor="let category of categories; trackBy: trackByCategory"
-         class="category-item"
-         [class.selected]="selectedCategory?.id === category.id"
-         role="option"
-         [attr.aria-selected]="selectedCategory?.id === category.id"
-         (click)="selectCategory(category)"
-         (keydown.enter)="selectCategory(category)"
-         (keydown.space)="selectCategory(category)"
-         tabindex="0">
-      <div class="category-color" [style.background-color]="category.color"></div>
-      <div class="category-info">
-        <span class="category-name">{{ category.name }}</span>
-        <span class="category-description" *ngIf="category.description">
-          {{ category.description }}
-        </span>
+    @for (category of categories; track trackByCategory($index, category)) {
+      <div
+        class="category-item"
+        [class.selected]="selectedCategory?.id === category.id"
+        role="option"
+        [attr.aria-selected]="selectedCategory?.id === category.id"
+        (click)="selectCategory(category)"
+        (keydown.enter)="selectCategory(category)"
+        (keydown.space)="selectCategory(category)"
+        tabindex="0">
+        <div class="category-color" [style.background-color]="category.color"></div>
+        <div class="category-info">
+          <span class="category-name">{{ category.name }}</span>
+          @if (category.description) {
+            <span class="category-description">
+              {{ category.description }}
+            </span>
+          }
+        </div>
+        @if (selectedCategory?.id === category.id) {
+          <mat-icon class="selected-icon">
+            check_circle
+          </mat-icon>
+        }
       </div>
-      <mat-icon *ngIf="selectedCategory?.id === category.id" class="selected-icon">
-        check_circle
-      </mat-icon>
+    }
+  </div>
+
+  @if (allowCreate) {
+    <mat-divider></mat-divider>
+  }
+
+  @if (allowCreate) {
+    <div class="create-category">
+      <button mat-stroked-button
+        (click)="openCreateDialog()"
+        class="create-btn"
+        aria-label="Criar nova categoria">
+        <mat-icon>add</mat-icon>
+        Nova Categoria
+      </button>
     </div>
-  </div>
-  
-  <mat-divider *ngIf="allowCreate"></mat-divider>
-  
-  <div class="create-category" *ngIf="allowCreate">
-    <button mat-stroked-button 
-            (click)="openCreateDialog()"
-            class="create-btn"
-            aria-label="Criar nova categoria">
-      <mat-icon>add</mat-icon>
-      Nova Categoria
-    </button>
-  </div>
-  
-  <div class="no-categories" *ngIf="categories.length === 0">
-    <mat-icon>category</mat-icon>
-    <p>Nenhuma categoria disponível</p>
-    <button mat-raised-button 
-            color="primary"
-            (click)="openCreateDialog()"
-            *ngIf="allowCreate">
-      <mat-icon>add</mat-icon>
-      Criar Primeira Categoria
-    </button>
-  </div>
+  }
+
+  @if (categories.length === 0) {
+    <div class="no-categories">
+      <mat-icon>category</mat-icon>
+      <p>Nenhuma categoria disponível</p>
+      @if (allowCreate) {
+        <button mat-raised-button
+          color="primary"
+          (click)="openCreateDialog()"
+          >
+          <mat-icon>add</mat-icon>
+          Criar Primeira Categoria
+        </button>
+      }
+    </div>
+  }
 </div>
