--- a/smart-calendar/src/app/shared/components/confirm-dialog/confirm-dialog.html
+++ b/smart-calendar/src/app/shared/components/confirm-dialog/confirm-dialog.html
@@ -9,59 +9,79 @@
   <div class="dialog-content">
     <div class="message-content">
       <p class="primary-message">{{ message }}</p>
-      <p class="secondary-message" *ngIf="details">{{ details }}</p>
+      @if (details) {
+        <p class="secondary-message">{{ details }}</p>
+      }
 
-      <div class="warning-box" *ngIf="type === 'warning' || type === 'danger'">
-        <mat-icon>warning</mat-icon>
-        <span>Esta ação não pode ser desfeita</span>
-      </div>
+      @if (type === 'warning' || type === 'danger') {
+        <div class="warning-box">
+          <mat-icon>warning</mat-icon>
+          <span>Esta ação não pode ser desfeita</span>
+        </div>
+      }
 
-      <div class="info-list" *ngIf="additionalInfo && additionalInfo.length > 0">
-        <h4>Informações adicionais:</h4>
-        <ul>
-          <li *ngFor="let info of additionalInfo">{{ info }}</li>
-        </ul>
-      </div>
+      @if (additionalInfo && additionalInfo.length > 0) {
+        <div class="info-list">
+          <h4>Informações adicionais:</h4>
+          <ul>
+            @for (info of additionalInfo; track info) {
+              <li>{{ info }}</li>
+            }
+          </ul>
+        </div>
+      }
 
-      <div class="confirmation-input" *ngIf="requireConfirmation">
-        <mat-form-field appearance="outline" class="full-width">
-          <mat-label>Digite "{{ confirmationText }}" para confirmar</mat-label>
-          <input matInput
-                 [(ngModel)]="userConfirmation"
-                 (input)="onConfirmationInput()"
-                 [placeholder]="confirmationText"
-                 autocomplete="off">
-          <mat-error *ngIf="showConfirmationError">
-            Texto de confirmação não confere
-          </mat-error>
-        </mat-form-field>
-      </div>
+      @if (requireConfirmation) {
+        <div class="confirmation-input">
+          <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Digite "{{ confirmationText }}" para confirmar</mat-label>
+            <input matInput
+              [(ngModel)]="userConfirmation"
+              (input)="onConfirmationInput()"
+              [placeholder]="confirmationText"
+              autocomplete="off">
+            @if (showConfirmationError) {
+              <mat-error>
+                Texto de confirmação não confere
+              </mat-error>
+            }
+          </mat-form-field>
+        </div>
+      }
 
-      <div class="checkbox-options" *ngIf="checkboxOptions && checkboxOptions.length > 0">
-        <mat-checkbox *ngFor="let option of checkboxOptions; trackBy: trackByOption"
-                     [(ngModel)]="option.checked"
-                     [disabled]="option.disabled || false">
-          {{ option.label }}
-        </mat-checkbox>
-      </div>
+      @if (checkboxOptions && checkboxOptions.length > 0) {
+        <div class="checkbox-options">
+          @for (option of checkboxOptions; track trackByOption($index, option)) {
+            <mat-checkbox
+              [(ngModel)]="option.checked"
+              [disabled]="option.disabled || false">
+              {{ option.label }}
+            </mat-checkbox>
+          }
+        </div>
+      }
     </div>
   </div>
 
   <div class="dialog-actions">
     <button mat-button
-            (click)="onCancel()"
-            [disabled]="isProcessing"
-            class="cancel-btn">
+      (click)="onCancel()"
+      [disabled]="isProcessing"
+      class="cancel-btn">
       {{ cancelText || 'Cancelar' }}
     </button>
 
     <button mat-raised-button
-            [color]="getConfirmButtonColor()"
-            (click)="onConfirm()"
-            [disabled]="!canConfirm() || isProcessing"
-            class="confirm-btn">
-      <mat-spinner *ngIf="isProcessing" diameter="20"></mat-spinner>
-      <mat-icon *ngIf="!isProcessing">{{ getConfirmIcon() }}</mat-icon>
+      [color]="getConfirmButtonColor()"
+      (click)="onConfirm()"
+      [disabled]="!canConfirm() || isProcessing"
+      class="confirm-btn">
+      @if (isProcessing) {
+        <mat-spinner diameter="20"></mat-spinner>
+      }
+      @if (!isProcessing) {
+        <mat-icon>{{ getConfirmIcon() }}</mat-icon>
+      }
       <span>{{ isProcessing ? 'Processando...' : (confirmText || 'Confirmar') }}</span>
     </button>
   </div>
